--- a/Frontend/electrodomesticos_index.html
+++ b/Frontend/electrodomesticos_index.html
@@ -34,12 +34,11 @@
       <thead>
         <tr class="text-center">
           <th>ID</th>
-          <th>Cédula</th>
           <th>Nombre</th>
-          <th>Apellido</th>
-          <th>Sexo</th>
-          <th>Estado Civil</th>
-          <th>Edad</th>
+          <th>Precio Base</th>
+          <th>Color</th>
+          <th>Consumo Energético</th>
+          <th>Peso</th>
           <th>Acciones</th>
         </tr>
       </thead>
@@ -48,7 +47,7 @@
     </table>
   </div>
 
-  <div class="modal fade" id="modalArticulo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modalArticulo2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header bg-primary text-white">
@@ -60,28 +59,24 @@
 
           <form>
             <div class="mb-3">
-              <label for="cedula" class="col-form-label">Cédula:</label>
-              <input id="cedula" type="number" class="form-control">
+              <label for="nombre_elect" class="col-form-label">Nombre:</label>
+              <input id="nombre_elect" type="text" class="form-control">
             </div>
             <div class="mb-3">
-              <label for="nombre" class="col-form-label">Nombre:</label>
-              <input id="nombre" type="text" class="form-control">
+              <label for="preciobase" class="col-form-label">Precio Base:</label>
+              <input id="preciobase" type="number" class="form-control">
             </div>
             <div class="mb-3">
-              <label for="apellido" class="col-form-label">Apellido:</label>
-              <input id="apellido" type="text" class="form-control">
+              <label for="color" class="col-form-label">Color:</label>
+              <input id="color" type="text" class="form-control">
             </div>
             <div class="mb-3">
-              <label for="sexo" class="col-form-label">Sexo:</label>
-              <input id="sexo" type="text" class="form-control">
+              <label for="consumo_energetico" class="col-form-label">Consumo Energético:</label>
+              <input id="consumo_energetico" type="text" class="form-control">
             </div>
             <div class="mb-3">
-              <label for="estado_civil" class="col-form-label">Estado Civil:</label>
-              <input id="estado_civil" type="text" class="form-control">
-            </div>
-            <div class="mb-3">
-              <label for="edad" class="col-form-label">Edad:</label>
-              <input id="edad" type="number" class="form-control">
+              <label for="peso" class="col-form-label">Peso:</label>
+              <input id="peso" type="number" class="form-control">
             </div>
 
 
@@ -103,7 +98,7 @@
     crossorigin="anonymous"></script>
   <!-- JavaScript -->
   <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-  <script src="code.js"></script>
+  <script src="code2.js"></script>
 
 </body>
 
