--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -56,6 +56,7 @@
           <th>Electrodoméstico</th>
           <th>Color</th>
           <th>Consumo Energético</th>
+          <th>Precio Base</th>
           <th>Peso</th>
           <th>Precio Final</th>
           <th>Acciones</th>
