--- a/Frontend/electrodomesticos.html
+++ b/Frontend/electrodomesticos.html
@@ -100,12 +100,12 @@
               <label for="consumo_energetico" class="col-form-label">Consumo Energético:</label>
               <select name="consumo_energetico" class="form-select" id="consumo_energetico" required>
                 <!-- <option selected disabled value="">Seleccione...</option> -->
-                <option value="100">A</option>
-                <option value="80">B</option>
-                <option value="60">C</option>
-                <option value="50">D</option>
-                <option value="30">E</option>
-                <option value="20">F</option>
+                <option>A</option>
+                <option>B</option>
+                <option>C</option>
+                <option>D</option>
+                <option>E</option>
+                <option>F</option>
               </select>
             </div>
 
