--- a/Frontend/electrodomesticos.html
+++ b/Frontend/electrodomesticos.html
@@ -137,7 +137,7 @@
     crossorigin="anonymous"></script>
   <!-- JavaScript -->
   <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-  <script src="eletrodomesticos.js"></script>
+  <script src="eletrodomesticos.js" type="module"></script>
 
 </body>
 
