--- a/Frontend/electrodomesticos.html
+++ b/Frontend/electrodomesticos.html
@@ -13,18 +13,10 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
   <!-- Default theme -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
+<link rel="stylesheet" href="css/style.css">
 
   <title>Acceso a Datos</title>
-  <style>
-    body {
-      background-color: #f7f6f6;
-    }
 
-    table thead {
-      background-color: #0a4f70;
-      color: white;
-    }
-  </style>
 </head>
 
 <body>
