--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,18 +13,19 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
   <!-- Default theme -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Acceso a Datos</title>
-  <style>
+  <!-- <style>
     body {
       background-color: #f7f6f6;
     }
 
     table thead {
-      background-color: #0a4f70;
+      background-color: blueviolet;
       color: white;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -71,7 +72,7 @@
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header bg-primary text-white">
-          <h5 class="modal-title" id="exampleModalLabel">Artículo</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Ventas</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
