--- a/Frontend/clientes.html
+++ b/Frontend/clientes.html
@@ -14,17 +14,9 @@
   <!-- Default theme -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
 
+  <link rel="stylesheet" href="css/style.css">
   <title>Acceso a Datos</title>
-  <style>
-    body {
-      background-color: #f7f6f6;
-    }
-
-    table thead {
-      background-color: #0a4f70;
-      color: white;
-    }
-  </style>
+  
 </head>
 
 <body>
