--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -71,7 +71,7 @@
 
           <form>
             <h2>Datos Cliente</h2>
-            <!-- <button type="button" class="btn btn-primary">Cliente</button> -->
+            <button type="button" class="btn btn-primary">Cliente</button>
             <div class="row">
               <div class="col-md-4 ms-auto">
                 <label for="cedula" class="col-form-label">Cédula:</label>
