--- a/Frontend/clientes.html
+++ b/Frontend/clientes.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <title>Acceso a Datos</title>
-  
+
 </head>
 
 <body>
@@ -55,7 +55,7 @@
     </table>
   </div>
 
-  <div class="modal fade" id="modalArticulo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modalArticuloCliente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header bg-primary text-white">
@@ -65,7 +65,7 @@
         <div class="modal-body">
 
 
-          <form>
+          <form id="formcliente">
             <div class="mb-3">
               <label for="cedula" class="col-form-label">Cédula:</label>
               <input id="cedula" type="number" class="form-control" required>
@@ -125,6 +125,7 @@
   <!-- JavaScript -->
   <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
   <script src="clientes.js"></script>
+  <!-- <script src="factura.js"></script> -->
 
 </body>
 
