--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <title>Acceso a Datos</title>
- 
+
 </head>
 
 <body>
@@ -71,7 +71,7 @@
 
           <form>
             <h2>Datos Cliente</h2>
-            <button type="button" class="btn btn-primary">Cliente</button>
+            <button type="button" id="btnTraerCliente" class="btnTraerCliente btn btn-primary">Cliente</button>
             <div class="row">
               <div class="col-md-4 ms-auto">
                 <label for="cedula" class="col-form-label">Cédula:</label>
@@ -154,6 +154,7 @@
   <!-- JavaScript -->
   <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
   <script src="factura.js"></script>
+  <!-- <script src="clientes.js"></script> -->
 
 </body>
 
